--- a/index.html
+++ b/index.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<title>MashhadPlus News</title>
+  <meta charset="UTF-8" />
+  <title>MashhadPlus News</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 20px;
+      direction: rtl;
+      text-align: right;
+    }
+    header {
+      background-color: #1e88e5;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      border-radius: 8px;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 20px 0;
+    }
+    nav ul li {
+      margin: 10px 0;
+    }
+    nav ul li a {
+      text-decoration: none;
+      color: #1e88e5;
+      font-size: 18px;
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 14px;
+      color: #999;
+    }
+  </style>
 </head>
 <body>
-<h1>مرحبًا بكم في MashhadPlus News</h1>
-<p>موقع متخصص في أخبار وتحليلات المال والأسواق.</p>
-<ul>
-<li><a href="stocks.html">صفحة الأسهم</a></li>
-</ul>
+
+  <header>
+    <h1>MashhadPlus News</h1>
+    <p>مصدر موثوق لأخبار وتحليلات الأسواق والقطاعات في السعودية والعالم العربي</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="stocks.html">📈 صفحة الأسهم</a></li>
+      <li><a href="real-estate.html">🏡 صفحة العقارات</a></li>
+      <li><a href="contact.html">📬 تواصل معنا</a></li>
+    </ul>
+  </nav>
+
+  <footer>
+    &copy; 2025 MashhadPlus News. جميع الحقوق محفوظة.
+  </footer>
+
 </body>
 </html>
