--- a/stocks.html
+++ b/stocks.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<title>صفحة الأسهم</title>
+  <meta charset="UTF-8" />
+  <title>صفحة الأسهم – MashhadPlus</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #ffffff;
+      margin: 0;
+      padding: 20px;
+      direction: rtl;
+      text-align: right;
+    }
+    header {
+      background-color: #1e88e5;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      border-radius: 8px;
+    }
+    section {
+      margin-top: 30px;
+    }
+    h2 {
+      color: #1e88e5;
+    }
+    ul {
+      list-style-type: square;
+      padding-right: 20px;
+    }
+    a {
+      color: #1e88e5;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 14px;
+      color: #999;
+    }
+  </style>
 </head>
 <body>
-<h1>تحليلات الأسهم</h1>
-<p>هنا تجد آخر أخبار وتحليلات السوق المالي.</p>
-<a href="index.html">العودة إلى الصفحة الرئيسية</a>
+
+  <header>
+    <h1>تحليلات الأسهم</h1>
+    <p>آخر أخبار وتحليلات السوق السعودي والعالمي</p>
+  </header>
+
+  <section>
+    <h2>📊 أبرز الأسهم اليوم:</h2>
+    <ul>
+      <li>أرامكو السعودية تسجل ارتفاعًا بنسبة 1.2%</li>
+      <li>مصرف الراجحي يواصل الاستقرار عند 88 ريال</li>
+      <li>شركة الاتصالات STC تحقق أرباحًا فصلية قياسية</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>📰 تقارير وتحليلات:</h2>
+    <ul>
+      <li><a href="#">تحليل فني: إلى أين تتجه المؤشرات في الربع القادم؟</a></li>
+      <li><a href="#">مقارنة بين أداء البنوك السعودية في 2024</a></li>
+      <li><a href="#">تأثير النفط على أداء السوق المحلي</a></li>
+    </ul>
+  </section>
+
+  <footer>
+    <p><a href="index.html">العودة إلى الصفحة الرئيسية</a></p>
+    <p>&copy; 2025 MashhadPlus News</p>
+  </footer>
+
 </body>
 </html>
