--- a/index.html
+++ b/index.html
@@ -2,129 +2,15 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>MashhadPlus News – موقع الصفحة الواحدة</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-      padding: 0;
-      direction: rtl;
-    }
-    header {
-      background-color: #1e88e5;
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #ffffff;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 10;
-    }
-    nav a {
-      margin: 0 15px;
-      color: #1e88e5;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 16px;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    section h2 {
-      color: #1e88e5;
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style: square;
-      padding-right: 20px;
-    }
-    form label {
-      display: block;
-      margin: 10px 0 5px;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
-    button {
-      background-color: #1e88e5;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-    footer {
-      background-color: #f0f0f0;
-      text-align: center;
-      padding: 20px;
-      color: #777;
-      font-size: 14px;
-    }
-  </style>
+  <title>MashhadPlus News</title>
 </head>
 <body>
-
-  <header>
-    <h1>MashhadPlus News</h1>
-    <p>منصة متكاملة لتحليلات الأسواق والعقارات والتواصل معك مباشرة</p>
-  </header>
-
-  <nav>
-    <a href="#stocks">الأسهم</a>
-    <a href="#real-estate">العقارات</a>
-    <a href="#contact">تواصل معنا</a>
-  </nav>
-
-  <section id="stocks">
-    <h2>📈 تحليلات الأسهم</h2>
-    <ul>
-      <li>أرامكو ترتفع بنسبة 1.2% بعد إعلان النتائج الفصلية</li>
-      <li>مصرف الراجحي يحافظ على استقراره عند 88 ريال</li>
-      <li>تقرير: توقعات أداء السوق في النصف الثاني من العام</li>
-    </ul>
-  </section>
-
-  <section id="real-estate">
-    <h2>🏡 أخبار العقارات</h2>
-    <ul>
-      <li>إطلاق مشروع سكني جديد في شمال الرياض بـ 2000 وحدة</li>
-      <li>الطلب على الشقق الذكية يرتفع بنسبة 15% في 2025</li>
-      <li>أفضل مدن للاستثمار العقاري في المملكة</li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>📬 تواصل معنا</h2>
-    <form>
-      <label for="name">الاسم الكامل</label>
-      <input type="text" id="name" name="name" placeholder="اكتب اسمك هنا" required>
-
-      <label for="email">البريد الإلكتروني</label>
-      <input type="email" id="email" name="email" placeholder="example@email.com" required>
-
-      <label for="message">رسالتك</label>
-      <textarea id="message" rows="5" placeholder="اكتب رسالتك هنا..." required></textarea>
-
-      <button type="submit">إرسال</button>
-    </form>
-  </section>
-
-  <footer>
-    &copy; 2025 MashhadPlus News – جميع الحقوق محفوظة
-  </footer>
-
+  <h1>مرحبًا بكم في MashhadPlus News</h1>
+  <p>موقع متخصص في أخبار وتحليلات المال والأسواق.</p>
+  <ul>
+    <li><a href="stocks.html">صفحة الأسهم</a></li>
+    <li><a href="real-estate.html">صفحة العقارات</a></li>
+    <li><a href="contact.html">تواصل معنا</a></li>
+  </ul>
 </body>
 </html>
