--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
   </header>
 
   <nav>
-    <a href="/stocks">صفحة الأسهم</a>
-    <a href="/real-estate">صفحة العقارات</a>
-    <a href="/contact">تواصل معنا</a>
+    <a href="stocks.html">صفحة الأسهم</a>
+    <a href="real-estate.html">صفحة العقارات</a>
+    <a href="contact.html">تواصل معنا</a>
   </nav>
 
   <main>
